# permission_check

./: Cargo.toml  README.md
permission_macro/: Cargo.toml  README.md
permission_macro/src/: lib.rs
permission_macro/tests/: test_complex.rs  test_generation.rs
permission_parser/: Cargo.toml  README.md
permission_parser/src/: expr.rs  lib.rs  parser.rs  token.rs  tokenizer.rs
src/: lib.rs
src/parser/: mod.rs  parser.rs  token.rs
tests/: test_expr.rs  test_normal.rs
