[package]
name = "permission_check"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/permission_check"
authors = ["i-am-unknown-81514525" ]
license-file = "LICENSE"
description = "A relatively flexible permission checking library written in rust which checks for permission is scope (like: org.1028.user.*.write), with macro for compile time type checking and code generation"

[workspace]
members = [
    "permission_macro",
    "permission_parser"
]

[dependencies]
permission_parser = {path = "permission_parser/", version = "0.1.0"}