[package]
name = "permission_macro"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/permission_check"
authors = ["i-am-unknown-81514525" ]
license-file = "LICENSE"
description = "A sub-crate of `permission_check`, which is used to provide more extensive support for build-time checking of permissions."
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
permission_parser = {path = "../permission_parser/", version = "0.1.0"}
permission_check = { path = "../", version = "0.1.0"}
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }